--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,32 @@
-name: Generate Datas
+name: Generate SVG image
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  schedule:
+    - cron: "0 */12 * * *" # every 12 hours
+
   workflow_dispatch:
 
-jobs:
-  build:
-    name: Jobs to update datas
-    runs-on: ubuntu-latest
-    steps:
-      # Snake Animation
-      - uses: Platane/snk@master
-        id: snake-gif
-        with:
-         svg_out_path: dist/github-contribution-grid-snake.svg
-              github_user_name:{{JuthyNadi-a}}
-                  
+  push:
+    branches:
+      - master
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+jobs:
+  generate:
+    runs-on: ubuntu-latest
+
+    timeout-minutes: 10
+
+    steps:
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk@master
         with:
-          target_branch: output
+          github_user_name: ${{ JuthyNadi-a }}
+          svg_out_path: dist/github-contribution-grid-snake.svg
+
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: snake
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.CRON_JOB_GITHUB_TOKEN }}
